Notification service component   - This includes entire component of notification service including email templates.

--- a/NotificationService/Web.config
+++ b/NotificationService/Web.config
@@ -3,6 +3,12 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="DBConnectionString" value="Dsn=HIPMgmtAuroraDB;data source={'DRIVER={MySQL ODBC 5.3 ANSI Driver}};Trusted_Connection = true'}"/>
+    <add key="Host" value="smtp.gmail.com"/>
+    <add key="EnableSsl" value="true"/>
+    <add key="UserName" value="integration.service@herschel.com"/>
+    <add key="Password" value="Cypr3ss!"/>
+    <add key="Port" value="587"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
